/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Xander Wilhelm
 */

package ucf.assignments;

import javafx.event.ActionEvent;

public class TodoController {
    public void createNewListClicked(ActionEvent actionEvent) {
        //calls createNewList() inside TodoModel
    }

    public void loadListClicked(ActionEvent actionEvent) {
        //calls loadList() inside TodoModel
    }

    public void loadMultipleListsClicked(ActionEvent actionEvent) {
        //calls loadMultipleLists() inside TodoModel
    }

    public void saveListClicked(ActionEvent actionEvent) {
        //calls saveList() inside TodoModel
    }

    public void saveMultipleListsClicked(ActionEvent actionEvent) {
        //calls saveMultipleLists() inside TodoModel
    }

    public void deleteListClicked(ActionEvent actionEvent) {
        //calls deleteList() inside TodoModel
    }

    public void helpClicked(ActionEvent actionEvent) {
        //calls help() inside TodoModel
    }

    public void editListNameClicked(ActionEvent actionEvent) {
        //calls editListName() inside TodoModel
    }

    public void editItemDescriptionClicked(ActionEvent actionEvent) {
        //calls editItemDescription() inside TodoModel
    }

    public void editItemDueDateClicked(ActionEvent actionEvent) {
        //calls editItemDueDate() inside TodoModel
    }

    public void deleteItemClicked(ActionEvent actionEvent) {
        //calls deleteItem() inside TodoModel
    }

    public void displayListClicked(ActionEvent actionEvent) {
        //calls displayList() inside TodoModel
    }

    public void displayAllItemsClicked(ActionEvent actionEvent) {
        //calls displayAllItems() inside TodoModel
    }

    public void displayCompletedItemsClicked(ActionEvent actionEvent) {
        //calls displayCompletedItems() inside TodoModel
    }

    public void displayIncompleteItemsClicked(ActionEvent actionEvent) {
        //calls displayIncompleteItems() inside TodoModel
    }

    public void markAsCompleteClicked(ActionEvent actionEvent) {
        //calls markAsComplete() inside TodoModel
    }

    public void markAsIncompleteClicked(ActionEvent actionEvent) {
        //calls markAsIncomplete() inside TodoModel
    }

    public void addItemClicked(ActionEvent actionEvent) {
        //calls addItem() inside TodoModel
    }

    public void submitClicked(ActionEvent actionEvent) {
        //calls submit() inside TodoModel
    }
}
